tried fixing placholder portfolio spot to align properly.Dont think it worked.

--- a/style.css
+++ b/style.css
@@ -2068,6 +2068,12 @@ footer ul
     height: 14vw;
 }
 
+#p-item-6 {
+    background-color: #1E1E1E;
+    height: 12.15vw;
+    width: 21.5vw;
+}
+
 @media screen and (max-width: 800px) {
     #portfolio_grid_vid {
         /* width: 34vw; */
@@ -2087,13 +2093,22 @@ footer ul
         /* width: 34vw; */
         height: 14vw;
     }  
+    
+    #p-item-6 {
+        background-color: #1E1E1E;
+        height: 12.15vw;
+        width: 15.5vw;
+    }
 }
 
-#p-item-6 {
-    background-color: #1E1E1E;
-    height: 12.15vw;
-    width: 21.5vw;
-}
+@media screen and (min-width: 1405px) {
+    #p-item-6 {
+        background-color: #1E1E1E;
+        height: 18.15vw;
+        width: 25.5vw;
+    }
+}    
+
 #portfolio-text-holder-4 {
     /* border: solid #5067c1; */
     top: 30%;
